added the ability to sign in
