# docs/swagger.yaml
@@ -6,6 +6,13 @@ definitions:
       name:
         type: string
     type: object
+  entities.Credentials:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
   entities.UserDTO:
     properties:
       cityID:
@@ -66,6 +73,18 @@ paths:
       responses: {}
       tags:
       - изображения
+  /sign-in:
+    post:
+      parameters:
+      - description: реквизиты для входа
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/entities.Credentials'
+      responses: {}
+      tags:
+      - пользователи
   /sign-up:
     post:
       parameters:
